--- a/server/frontend/src/index.css
+++ b/server/frontend/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500&display=swap");
+
+* {
+  font-family: "Noto Sans JP", sans-serif;
+}
+
+body {
+  background-image: url("./assets/images/vector-abstract-gradient-background-dynamic-shapes-composition.webp");
+}
