--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -20,7 +20,7 @@
   <body>
     <header>
       <h1>Dian FTP 📁 | Flask 🌐</h1>
-      <p>Your multi media exchange Side Chick</p>
+      <p>Your local multi media exchange Side Chick</p>
     </header>
     <section>
       <div id="container"></div>
@@ -29,7 +29,7 @@
     <section class="prompt-container">
       <div>
         <input style="display: none" type="file" name="" id="file-add" />
-        <button type="button" id="add-file" class="">
+        <button type="button" id="add-file">
           <img
             src="{{ url_for('static', filename='/icons/cloud-upload-outline.svg') }}"
             alt="Translate"
