--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -31,7 +31,7 @@
         <input style="display: none" type="file" name="" id="file-add" />
         <button type="button" id="add-file">
           <img
-            src="{{ url_for('static', filename='/icons/cloud-upload-outline.svg') }}"
+            src="{{ url_for('static', filename='icons/cloud-upload-outline.svg') }}"
             alt="Translate"
           />
         </button>
@@ -42,7 +42,7 @@
         ></textarea>
         <button type="button" id="menuBtn" class="">
           <img
-            src="{{ url_for('static', filename='/icons/send-outline.svg') }}"
+            src="{{ url_for('static', filename='icons/send-outline.svg') }}"
             alt="Translate"
           />
         </button>
