📜 start up script modified

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dian FTP</title>
+    <title>DianX</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header>
-      <h1>Dian FTP 📁 | Flask 🌐</h1>
+      <h1>Dian Xchange 📁 | Flask 🌐</h1>
       <p>Your local multi media exchange Side Chick</p>
     </header>
     <section>
